fix bug in footer where last div in footer tag doesnt align correctly when in small screen

--- a/app/assets/stylesheets/users_&_footer.css
+++ b/app/assets/stylesheets/users_&_footer.css
@@ -64,5 +64,5 @@ footer {
 .footer-made-w-love {
   background-color: rgb(36, 36, 36);
   padding: 20px 0 20px 0;
-  margin:  0 -20px 0 -20px;
+  color: white;
 }
